--- a/src/icons/Perfil.astro
+++ b/src/icons/Perfil.astro
@@ -1,1 +1,1 @@
-<img class="rounded-full w-[120px] h-[120px]" src="/PorfolioMM/MMPhoto2.jpg" alt="manudev" />	
+<img class="rounded-full w-[120px] h-[120px]" src="/public/MMPhoto2.jpg" alt="manudev" />	
