--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,10 +47,11 @@ import Timeline from  '../components/Timeline.astro';
 			
 		</section>
 
+		
 		<section class="flex justify-center p-11">
-			<h2 class="">Experiencia Laboral</h3>
+			<div><h2 class="flex justify-center">Experiencia Laboral</h3><br>	
+			</div>
 			<div class="max-w-screen-md p-4"><Timeline></Timeline> </div>
-           
         </section>
     
 		
