--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import Timeline from  '../components/Timeline.astro';
 			</div>
 			
 			<!-- Título centrado y responsivo -->
-			<h1 class="flex justify-center text-1xl sm:text-1xl md:text-2xl lg:text-4xl font-bold text-center">
+			<h1 class="flex justify-center text-2xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-center">
 				Hola, <br>Soy Manuel Mendieta
 			</h1>
 
@@ -42,15 +42,25 @@ import Timeline from  '../components/Timeline.astro';
 				<SocialPill href="https://github.com/ManuelMendieta21">
 					<Github class="w-6 h-6"/>
 					Github</a>				
-			</nav>
-
-			
+			</nav>			
 		</section>
 
+
+		<section>
+			<div class="flex justify-around">
+                <div class="w-auto p-2">
+                  <h3 class="font-heading font-semibold  text-2xl">Experiencia Laboral</h3>
+                  
+                </div>
+		</section>
+           
+            
+            
+
+	
 		
-		<section class="flex justify-center p-11">
-			<div><h2 class="flex justify-center">Experiencia Laboral</h3><br>	
-			</div>
+		<section class="p-0 flex justify-center">
+			
 			<div class="max-w-screen-md p-4"><Timeline></Timeline> </div>
         </section>
     
