update font text

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@
 
   <nav class="py-6 mx-8 w-full flex flex-row gap-5 justify-center text-2l">
     <a href="/" class="hover:text-red-600">Home</a>
-    <a href="/project" class="hover:text-red-600">Project</a>
+    <a href="/Project" class="hover:text-red-600">Project</a>
     <a href="/contact" class="hover:text-red-600">Contact</a>
 </nav>
 </header>
