--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -6,7 +6,7 @@
                 <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
             </svg>
         </span>
-        <h3 class="flex items-center mb-1 text-lg font-semibold text-gray-900 dark:text-white">Contact and Bussines IT - Analista Soporte Aplicaciones Nivel II<span class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3">Ultima Experiencia</span></h3>
+        <h3 class="flex items-center mb-1 text-lg font-semibold">Contact and Bussines IT - Analista Soporte Aplicaciones Nivel II<span class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3">Ultima Experiencia</span></h3>
         <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Año 2022 - Septiembre 2024</time>
         <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400"> Encargado de desarrollar herramientas de automatización de procesos y sistemas de información. Revision de fallas en la aplicacion y problemas de seguridad. escalamiento a lider tecnico mediante jira.  </p>
         <a href="https://www.canva.com/design/DAGTpqufjUM/fDZKgwIb7u8R3fPMnGQzfQ/edit" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
@@ -20,7 +20,7 @@
                 <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
             </svg>
         </span>
-        <h3 class="mb-1 text-lg font-semibold text-gray-900 dark:text-white">Analizar laboratorio Clinico - Coordinador IT </h3>
+        <h3 class="mb-1 text-lg font-semibold">Analizar laboratorio Clinico - Coordinador IT </h3>
         <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Años 2016 - 2021</time>
         <p class="text-base font-normal text-gray-500 dark:text-gray-400">
             Responsable de la administración de bases de datos (MySQL, SQL Server) y de infraestructura tecnológica con VMware, gestionando servidores y sistemas operativos (Windows Server 2012, 2016; Linux: Ubuntu, CentOS, SUSE). Implementación y seguimiento de respaldos automatizados mediante NAS, asegurando la disponibilidad y correcto funcionamiento de los servidores y la infraestructura.
@@ -33,7 +33,7 @@
                 <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
             </svg>
         </span>
-        <h3 class="mb-1 text-lg font-semibold text-gray-900 dark:text-white">Integrupo Software ONE - Analista de Soporte </h3>
+        <h3 class="mb-1 text-lg font-semibold">Integrupo Software ONE - Analista de Soporte </h3>
         <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Released on December 2nd, 2021</time>
         <p class="text-base font-normal text-gray-500 dark:text-gray-400">Analista de soporte en sitio encargado de garantizar el correcto funcionamiento de los equipos computo. Generar reportes, administrar los equipos de
             
@@ -48,7 +48,7 @@
                 <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
             </svg>
         </span>
-        <h3 class="mb-1 text-lg font-semibold text-gray-900 dark:text-white">System Technology</h3>
+        <h3 class="mb-1 text-lg font-semibold">System Technology</h3>
         <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Años 2013 - 2015</time>
         <p class="text-base font-normal text-gray-500 dark:text-gray-400">
             Soporte técnico Mesa de ayuda y sitio, mantenimientos preventivos y correctivos equipos de computo, control de inventarios. Proyectos trabajados: Judicatura, UNE, DHL global y Avianca.</p>
