--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -8,8 +8,18 @@
         </span>
         <h3 class="flex items-center mb-1 text-lg font-semibold">Contact and Bussines IT - Analista Soporte Aplicaciones Nivel II<span class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3">Ultima Experiencia</span></h3>
         <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Año 2022 - Septiembre 2024</time>
-        <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400"> Encargado de desarrollar herramientas de automatización de procesos y sistemas de información. Revision de fallas en la aplicacion y problemas de seguridad. escalamiento a lider tecnico mediante jira.  </p>
-        <a href="https://www.canva.com/design/DAGTpqufjUM/fDZKgwIb7u8R3fPMnGQzfQ/edit" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+        <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400"> Analizar y desarrollar herramientas para optimizar actividades usando JavaScript en el entorno de ejecución Node.js.
+            Emplear frameworks como Express y Astro, además de componentes Tailwind CSS UI para mejorar la experiencia de usuario.
+            Revisar y detectar fallas en el código, documentar la aplicación y analizar problemas de seguridad conforme a las directrices de OWASP.
+            Utilizar Qradar para la supervisión de seguridad y detectar posibles vulnerabilidades.
+            Escalar historias de usuario y tareas de exploración (spikes), proporcionando análisis detallado al líder técnico.
+            Utilizar herramientas de colaboración como Jira, Confluence y Slack para mantener la comunicación y documentación del equipo.
+            Crear y generar reportes directamente desde bases de datos SQL Server y PostgreSQL.
+            Diseñar y optimizar procedimientos almacenados para mejorar el rendimiento y la eficiencia en la consulta de datos.
+            Monitorear la infraestructura en AWS y configurar alertas para supervisar el rendimiento y la disponibilidad del sistema.
+            Implementar herramientas de monitoreo como AWS CloudWatch y New Relic para una vigilancia proactiva y eficaz.
+            </p>
+        <a href="https://manuvitae.s3.us-east-1.amazonaws.com/Manuel+Mendieta+CV.pdf" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
     <path d="M14.707 7.793a1 1 0 0 0-1.414 0L11 10.086V1.5a1 1 0 0 0-2 0v8.586L6.707 7.793a1 1 0 1 0-1.414 1.414l4 4a1 1 0 0 0 1.416 0l4-4a1 1 0 0 0-.002-1.414Z"/>
     <path d="M18 12h-2.55l-2.975 2.975a3.5 3.5 0 0 1-4.95 0L4.55 12H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2Zm-3 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"/>
   </svg> Descargar  CV</a>
