update Contact and ADS google

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Perfil from '../icons/Perfil.astro';
 import Timeline from  '../components/Timeline.astro';
 ---
 
-<Layout title="Porfolio Manuel Mendieta Ingeniero de sistemas" description="Ingeniero de sistemas con mas de 10 años de experiencia">
+<Layout title="Portafolio Manuel Mendieta Ingeniero de sistemas" description="Ingeniero de sistemas con mas de 10 años de experiencia">
 	<main>
 		<section class="p-3 m-5">
 			<!-- Imagen centrada -->
@@ -50,21 +50,11 @@ import Timeline from  '../components/Timeline.astro';
 			<div class="flex justify-around">
                 <div class="w-auto p-2">
                   <h3 class="font-heading font-semibold  text-2xl">Experiencia Laboral</h3>
-                  
                 </div>
 		</section>
-           
-            
-            
-
-	
-		
 		<section class="p-0 flex justify-center">
 			<div class="max-w-screen-md p-4"><Timeline></Timeline> </div>
         </section>
-    
-		
-
 	</main>
 
 </Layout>
