Update event script formSend

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header class="flex items-center w-auto m-1 opacity-70">
+<header transition:animate="slide" class="flex items-center w-auto m-1 opacity-70">
   <button type="button" class="absolute right-8 top-4 flex h-9 w-9 items-center justify-center rounded-lg bg-gray-200 ring-gray-300 transition-all hover:ring-2 dark:bg-gray-600 sm:ml-3" 
     id="theme-toggle">
     <span class="sr-only">Enable <span class="dark:hidden">light</span><span class="hidden dark:inline">dark</span> mode</span>
@@ -11,7 +11,7 @@
   </button>
 
   <nav class="py-6 mx-8 w-full flex flex-row gap-5 justify-center text-2l">
-    <a href="./index" class="hover:text-red-600">Home</a>
+    <a href="./" class="hover:text-red-600">Home</a>
     <a href="./Project" class="hover:text-red-600">Project</a>
     <a href="./Contact" class="hover:text-red-600">Contact</a>
 </nav>
