--- a/src/components/FormSend.astro
+++ b/src/components/FormSend.astro
@@ -2,19 +2,19 @@
     <div class="h-auto w-[29rem] bg-[#e5e5e5] p-3 rounded-lg">
       <form id="contactForm" class="max-w-sm mx-auto">
         <!-- Campo de nombre -->
-        <label for="nameContact" class="block mb-2 text-sm font-medium text-black dark:text-white">
+        <label for="nameContact" class="block mb-2 text-sm font-medium text-black">
           Nombre:
         </label>
-        <input id="nameContact" type="text" class="bg-gray-50 border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Ingresa tu nombre" required>
+        <input id="nameContact" type="text" class="bg-gray-50 border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400  dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Ingresa tu nombre" required>
   
         <!-- Campo de email -->
-        <label for="emailContact" class="block mb-2 text-sm font-medium text-black dark:text-white mt-4">
+        <label for="emailContact" class="block mb-2 text-sm font-medium text-black mt-4">
           Email de Contacto:
         </label>
-        <input id="emailContact" type="email" class="bg-gray-50 border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="nombre@outlook.com" required>
+        <input id="emailContact" type="email" class="bg-gray-50 border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400  dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="nombre@outlook.com" required>
   
         <!-- Campo de mensaje -->
-        <label for="message" class="block mb-2 text-sm font-medium text-black dark:text-white mt-4">
+        <label for="message" class="block mb-2 text-sm font-medium text-black  mt-4">
           Tu Mensaje
         </label>
         <textarea id="message" rows="4" class="block p-2.5 w-full text-sm rounded-lg border text-black focus:ring-blue-500 focus:border-blue-500" placeholder="Ingresa tu mensaje" required></textarea>
