automatizacion create email

--- a/src/components/FormSend.astro
+++ b/src/components/FormSend.astro
@@ -5,13 +5,13 @@
         <label for="nameContact" class="block mb-2 text-sm font-medium text-black">
           Nombre:
         </label>
-        <input id="nameContact" type="text" class="bg-gray-50 border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400  dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Ingresa tu nombre" required>
+        <input id="nameContact" type="text" class="text-black bg-gray-50 border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400  dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Ingresa tu nombre" required>
   
         <!-- Campo de email -->
         <label for="emailContact" class="block mb-2 text-sm font-medium text-black mt-4">
           Email de Contacto:
         </label>
-        <input id="emailContact" type="email" class="bg-gray-50 border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400  dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="nombre@outlook.com" required>
+        <input id="emailContact" type="email" class="text-black bg-gray-50 border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400  dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="nombre@outlook.com" required>
   
         <!-- Campo de mensaje -->
         <label for="message" class="block mb-2 text-sm font-medium text-black  mt-4">
