--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -44,7 +44,7 @@ import Layout from '../layouts/Layout.astro';
   
         try {
           // Enviar datos al webhook de n8n
-          const response = await fetch("https://mimanudev.app.n8n.cloud/webhook/3eb8746e-a80b-4c2f-9164-479d7f70c92c", {
+          const response = await fetch("https://port.mimanudev.site/webhook/3eb8746e-a80b-4c2f-9164-479d7f70c92c", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
