--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -8,16 +8,25 @@
         </span>
         <h3 class="flex items-center mb-1 text-lg font-semibold">Contact and Bussines IT - Analista Soporte Aplicaciones Nivel II<span class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3">Ultima Experiencia</span></h3>
         <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Año 2022 - Septiembre 2024</time>
-        <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400"> Analizar y desarrollar herramientas para optimizar actividades usando JavaScript en el entorno de ejecución Node.js.
-            Emplear frameworks como Express y Astro, además de componentes Tailwind CSS UI para mejorar la experiencia de usuario.
-            Revisar y detectar fallas en el código, documentar la aplicación y analizar problemas de seguridad conforme a las directrices de OWASP.
-            Utilizar Qradar para la supervisión de seguridad y detectar posibles vulnerabilidades.
-            Escalar historias de usuario y tareas de exploración (spikes), proporcionando análisis detallado al líder técnico.
-            Utilizar herramientas de colaboración como Jira, Confluence y Slack para mantener la comunicación y documentación del equipo.
-            Crear y generar reportes directamente desde bases de datos SQL Server y PostgreSQL.
-            Diseñar y optimizar procedimientos almacenados para mejorar el rendimiento y la eficiencia en la consulta de datos.
-            Monitorear la infraestructura en AWS y configurar alertas para supervisar el rendimiento y la disponibilidad del sistema.
-            Implementar herramientas de monitoreo como AWS CloudWatch y New Relic para una vigilancia proactiva y eficaz.
+        <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400"> Garantizar el correcto funcionamiento aplicaciones del core del negocio
+            en ambientes productivos.
+            Implementar herramientas de monitoreo con AWS CloudWatch y New
+            Relic, para la vigilancia alertamientos y revision de logs de manera eficaz
+            sobre las aplicaciones a nivel de instancias y bases de datos.
+            Crear y generar reportes desde bases de datos SQL Server y PostgreSQL e
+            implementar automatizaciones.
+            Revisión de casos y atencion oportuna dando cumpliendo SLA a usuarios
+            internos y extenos de la compañia.
+            Utilizar Qradar y OWASP para la supervisión de seguridad y detectar
+            posibles vulnerabilidades a nivel de codigo.
+            Escalar historias de usuario con los requerimientos y tareas de
+            exploración (spikes), proporcionando análisis detallado fallas o bugs al
+            líder técnico o PMO.
+            Utilizar herramientas de colaboración como Jira, Confluence y Slack para
+            mantener la comunicación y documentación del equipo.
+            Crear automatizaciones, base actividades rutinarias mediante
+            herramientas desarrollo o herramientas PASS.
+            
             </p>
         <a href="https://manuvitae.s3.us-east-1.amazonaws.com/Manuel+Mendieta+CV.pdf" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
     <path d="M14.707 7.793a1 1 0 0 0-1.414 0L11 10.086V1.5a1 1 0 0 0-2 0v8.586L6.707 7.793a1 1 0 1 0-1.414 1.414l4 4a1 1 0 0 0 1.416 0l4-4a1 1 0 0 0-.002-1.414Z"/>
