--- a/src/pages/Project.astro
+++ b/src/pages/Project.astro
@@ -1,10 +1,9 @@
 ---
+import Projects from '../components/Projects.astro';
 import Layout from '../layouts/Layout.astro';
-
 ---
 
 <Layout title="Porfolio Manuel Mendieta Ingeniero de sistemas" description="Ingeniero de sistemas con mas de 10 años de experiencia">
-	
- 
-
+<Projects/>
+    
 </Layout>
