--- a/src/components/FormSend.astro
+++ b/src/components/FormSend.astro
@@ -1,4 +1,4 @@
-<div class="flex justify-center p-7">
+<div class="flex justify-center p-7 mt-16">
     <div class="h-auto w-[29rem] bg-[#e5e5e5] p-3 rounded-lg">
       <form id="contactForm" class="max-w-sm mx-auto">
         <!-- Campo de nombre -->
