--- a/src/icons/Perfil.astro
+++ b/src/icons/Perfil.astro
@@ -32,7 +32,7 @@
 
       <div class="flex justify-end items-center p-2 bg-gradient-to-b from-[#210083] to-[#666089] rounded-bl-[230px] w-full h-full">
         <div class="h-72 w-72 rounded-full bg-gradient-to-tr from-[#000283] to-[#5844ee] p-5">
-          <img src="./public/MMPhoto3.jpg" class="w-full h-full rounded-full object-cover border-8 border-white" alt="img" />
+          <img src="/removebg.jpg" class="w-full h-full rounded-full object-cover border-8 border-white" alt="img" />
         </div>
       </div>
     </div>
