--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -1,4 +1,5 @@
 ---
+import FooterFinal from '../components/FooterFinal.astro';
 import FormSend from '../components/FormSend.astro';
 import Layout from '../layouts/Layout.astro';
 
@@ -9,9 +10,11 @@ import Layout from '../layouts/Layout.astro';
  
 
 </Layout>
+<div class="col-12"><picture><source srcset="/images/banner_hu5767889388093870374.webp" media="(max-width: 575px)"><source srcset="/images/banner_hu13454120556947067300.webp" media="(max-width: 767px)"><source srcset="/images/banner_hu16092701587328752241.webp" media="(max-width: 991px)"><source srcset="/images/banner_hu13533946027924257200.webp"><img loading="eager" decoding="async" src="/images/banner_hu16949873544788829848.png" class="mx-auto lg:!max-w-[800px] img" alt="Banner image" width="1206" height="553"></picture></div>
 <FormSend>
     
 </FormSend>
+<FooterFinal/>
 
 
 
