--- a/src/components/FooterFinal.astro
+++ b/src/components/FooterFinal.astro
@@ -6,9 +6,6 @@
           <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Graphic Design Tools</a></li>
           <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Video Editing Tools</a></li>
           <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Image Enhancer</a></li>
-          <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Remove Backgrounds</a></li>
-          <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Photo Enhancement</a></li>
-          <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Explore All Tools</a></li>
         </ul>
       </div>
 
@@ -19,9 +16,6 @@
           <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Terms & Conditions</a></li>
           <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">User Agreement</a></li>
           <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Data Privacy Policy</a></li>
-          <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Copyright Notice</a></li>
-          <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Cookie Usage Policy</a></li>
-          <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Manage Cookies</a></li>
         </ul>
       </div>
 
@@ -30,14 +24,10 @@
         <h6 class="text-sm text-white font-medium">SOCIAL MEDIA</h6>
         <ul class="flex space-x-4">
           <li>
-            <a href='javascript:void(0)'>
-              <svg xmlns="http://www.w3.org/2000/svg" class="fill-blue-600 w-8 h-8" viewBox="0 0 49.652 49.652">
-                <path d="M24.826 0C11.137 0 0 11.137 0 24.826c0 13.688 11.137 24.826 24.826 24.826 13.688 0 24.826-11.138 24.826-24.826C49.652 11.137 38.516 0 24.826 0zM31 25.7h-4.039v14.396h-5.985V25.7h-2.845v-5.088h2.845v-3.291c0-2.357 1.12-6.04 6.04-6.04l4.435.017v4.939h-3.219c-.524 0-1.269.262-1.269 1.386v2.99h4.56z" data-original="#000000" />
-              </svg>
-            </a>
+            
           </li>
           <li>
-            <a href='javascript:void(0)'>
+            <a href='https://www.linkedin.com/in/manuel-mendieta-b0a43167/'>
               <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 112.196 112.196">
                 <circle cx="56.098" cy="56.097" r="56.098" fill="#007ab9" data-original="#007ab9" />
                 <path fill="#fff" d="M89.616 60.611v23.128H76.207V62.161c0-5.418-1.936-9.118-6.791-9.118-3.705 0-5.906 2.491-6.878 4.903-.353.862-.444 2.059-.444 3.268v22.524h-13.41s.18-36.546 0-40.329h13.411v5.715c-.027.045-.065.089-.089.132h.089v-.132c1.782-2.742 4.96-6.662 12.085-6.662 8.822 0 15.436 5.764 15.436 18.149zm-54.96-36.642c-4.587 0-7.588 3.011-7.588 6.967 0 3.872 2.914 6.97 7.412 6.97h.087c4.677 0 7.585-3.098 7.585-6.97-.089-3.956-2.908-6.967-7.496-6.967zm-6.791 59.77H41.27v-40.33H27.865v40.33z" data-original="#f1f2f2" />
@@ -76,8 +66,9 @@
             </a>
           </li>
         </ul>
+        <div class="flex justify-center"><img src="/Component4.png" alt="logo" class="w-22 h-10 " />
+        </div>
        
-
     <hr class="my-6 border-gray-600" />
 
     <div class="max-w-screen-xl mx-auto text-center">
