--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,7 +23,7 @@
   width: 50%;
   height: 70px; /* Altura inicial del header */
   background-size: cover;
-  background-image: url('../public/bannerinit.avif');
+  background-image: url('/bannerinit.avif');
   background-position: fixed ;
   transition: height 0.3s ease, background-color 0.3s ease;
   position: fixed;
