--- a/src/components/ImagePerfil.astro
+++ b/src/components/ImagePerfil.astro
@@ -1,3 +1,3 @@
 <div class="flex justify-center ">
-    <img class="rounded-full w-[160px] h-[160px] border-solid" src="/public/MMPhoto2" alt="manudev" />
+    <img class="rounded-full w-[160px] h-[160px] border-solid" src="/removebg" alt="manudev" />
 </div>
