--- a/src/pages/Project.astro
+++ b/src/pages/Project.astro
@@ -1,4 +1,5 @@
 ---
+import FooterFinal from '../components/FooterFinal.astro';
 import Projects from '../components/Projects.astro';
 import Layout from '../layouts/Layout.astro';
 ---
@@ -7,3 +8,5 @@ import Layout from '../layouts/Layout.astro';
 <Projects/>
     
 </Layout>
+
+<FooterFinal/>
