--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,51 +1,52 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Badge from  '../components/Badge.astro';
 import Linkedin from  '../icons/LinkedinIcon.astro';
 import Github from  '../icons/GithubIcon.astro';
-import SocialPill from '../components/SocialPill.astro';
 import Perfil from '../icons/Perfil.astro';
 import Timeline from  '../components/Timeline.astro';
 import FooterFinal from '../components/FooterFinal.astro';
+import SocialPill from '../components/SocialPill.astro';
 ---
 
 <Layout title="Portafolio Manuel Mendieta Ingeniero de sistemas" description="Ingeniero de sistemas con mas de 10 años de experiencia">
 	<main>
-		<section class="p-12 m-12">
-			<Perfil />
-			</h1>
-			<div class="flex justify-center p-2.5">
-				
-			</div>
-			<div class="flex justify-center">
-				<div class="max-w-screen-md text-center p-4">
-					<h2 class="m-2 p-2">
-						Ingeniero de Sistemas con mas de 10 años de Experiencia, Liderando proyectos de infraestructura y Soporte de servidores Onpremise y cloud especialmente AWS, administración de bases de datos (SQL, MySQL, PostgreSQL). Tengo Conocimientos en desarrollo de software y diseño de páginas web.
-					</h2>
+		<br>
+		<div class="p-2.5 m-2 ">
+			<section class="flex flex-col items-center justify-center mt-16">
+				<Perfil />
+				<div class="flex justify-center p-2.5">
+				  <!-- Contenido adicional si es necesario -->
 				</div>
-			</div>
-			
-
-			<nav class="flex gap-x-4 justify-center ">
-				<SocialPill class="" href="https://www.linkedin.com/in/manuel-mendieta-b0a43167/">
-					<Linkedin class="w-6 h-6"/>
-					linkedin
-				<SocialPill href="https://github.com/ManuelMendieta21">
-					<Github class="w-6 h-6"/>
-					Github</a>				
-			</nav>			
-		</section>
+				<div class="flex justify-center">
+				  <div class="max-w-screen-md text-center p-4">
+					<h2 class="m-2 p-2">
+					  Ingeniero de Sistemas con mas de 10 años de Experiencia, Liderando proyectos de infraestructura y Soporte de servidores Onpremise y cloud especialmente AWS, administración de bases de datos (SQL, MySQL, PostgreSQL). Tengo Conocimientos en desarrollo de software y diseño de páginas web.
+					</h2>
+				  </div>
+				</div>
+				<nav class="flex gap-x-4 justify-center ">
+					<SocialPill class="w-15 h-5" href="https://www.linkedin.com/in/manuel-mendieta-b0a43167/">
+						<Linkedin class="w-6 h-6"/>
+						linkedin
+					</SocialPill>	
+					<SocialPill href="https://github.com/ManuelMendieta21">
+						<Github class="w-6 h-6"/>
+						Github</a>
+					</SocialPill>				
+				</nav>		
+			  </section>
 
 
 		<section>
 			<div class="flex justify-around">
-                <div class="w-auto p-2">
+                <div class="w-auto p-10">
                   <h3 class="font-heading font-semibold  text-2xl">Experiencia Laboral</h3>
                 </div>
 		</section>
 		<section class="p-0 flex justify-center">
 			<div class="max-w-screen-md p-4"><Timeline></Timeline> </div>
         </section>
+	</div>
 	</main>
 
 </Layout>
