update porfolio previos a starlight

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -6,24 +6,33 @@
 </h1>
 <div class="grid-container p-12 m-12">
     <div class="overflow-hidden shadow-lg rounded-lg h-auto cursor-pointer p-4 bg-indigo-50 transition duration-500 ease-in-out transform hover:translate-y-5 hover:shadow-2xl">
-        <a href="#" class="w-full block h-full">
-            <img alt="blog photo" src="https://ouch-cdn2.icons8.com/7IafUowCewhP-tIcwdGHyXhsJoqElQ00jmljBiQ2GMU/rs:fit:1216:912/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvNjYv/YTc5MzE5ZDMtNWM5/ZS00MTVmLWJiMjQt/MzMxZjczZmQwN2Vj/LnBuZw.png" class="max-h-60 w-full object-cover"/>
+        <a href="Porfolio" class="w-full block h-full">
+            <img alt="blog photo" src="/Mimanudev.png" class="max-h-60 w-full object-cover"/>
             <div class="w-full">
-                <p class="text-indigo-500 text-md font-medium">
-                    Article
-                </p>
+                <br>
                 <p class="text-gray-800 dark:text-white text-xl font-medium mb-2">
-                    Supercharged !
+                    Portafolio Personal
                 </p>
                 <p class="text-gray-600 dark:text-gray-300 font-light text-md">
-                    The new supercar is here, 543 cv and 140 000$. This is best racing GT about 7 years on...
+                    Este es mi portafolio personal, donde podras ver mis proyectos y mis habilidades.
                 </p>
                 <div class="flex flex-wrap justify-starts items-center mt-4 border-t-2 pt-5">
+                    
                     <div class="text-xs mr-2 py-1.5 px-4 text-gray-600 bg-blue-200 rounded-2xl">
-                        #Car
+                        <img src="/DeviconAstro.svg" alt="astro" class="w-6 h-6"/>
+                        #Astro
                     </div>
                     <div class="text-xs mr-2 py-1.5 px-4 text-gray-600 bg-blue-200 rounded-2xl">
-                        #Money
+                        <img src="/CiHtml5.svg" alt="html" class="w-6 h-6">
+                        #HTML
+                    </div>
+                    <div class="text-xs mr-2 py-1.5 px-4 text-gray-600 bg-blue-200 rounded-2xl">
+                        <img src="/TeenyiconsTailwind.svg" alt="tailwind" class="w-6 h-6">
+                        #Tailwind
+                    </div>
+                    <div class="text-xs mr-2 py-1.5 px-4 text-gray-600 bg-blue-200 rounded-2xl">
+                        <img src="/SimpleIconsN8n.svg" alt="tailwind" class="w-6 h-6        ">
+                        #N8N
                     </div>
                 </div>
             </div>
