--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import SocialPill from '../components/SocialPill.astro';
 				<div class="flex justify-center">
 				  <div class="max-w-screen-md text-center p-4">
 					<h2 class="m-2 p-2">
-					  Ingeniero de Sistemas con mas de 10 años de Experiencia, Liderando proyectos de infraestructura y Soporte de servidores Onpremise y cloud especialmente AWS, administración de bases de datos (SQL, MySQL, PostgreSQL). Tengo Conocimientos en desarrollo de software y diseño de páginas web.
+					  Ingeniero de Sistemas con mas de 10 años de Experiencia, Liderando proyectos de infraestructura y Soporte de servidores on premises  Cloud AWS, administración de bases de datos (SQL, MySQL, PostgreSQL). Tengo Conocimientos en desarrollo de software y diseño de páginas web.
 					</h2>
 				  </div>
 				</div>
