--- a/src/components/FooterFinal.astro
+++ b/src/components/FooterFinal.astro
@@ -3,9 +3,9 @@
       <div class="space-y-4">
         <h6 class="text-sm text-white font-medium">RESOURCES</h6>
         <ul class="space-y-2.5">
-          <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Graphic Design Tools</a></li>
-          <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Video Editing Tools</a></li>
-          <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Image Enhancer</a></li>
+          <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Design Tools Figma</a></li>
+          <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Frameworks Astro, Tailwind</a></li>
+      
         </ul>
       </div>
 
@@ -14,7 +14,6 @@
         <h6 class="text-sm text-white font-medium">POLICIES</h6>
         <ul class="space-y-2.5">
           <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Terms & Conditions</a></li>
-          <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">User Agreement</a></li>
           <li><a href="javascript:void(0)" class="text-[13px] text-gray-400 hover:text-white">Data Privacy Policy</a></li>
         </ul>
       </div>
@@ -35,7 +34,7 @@
             </a>
           </li>
           <li>
-            <a href='javascript:void(0)'>
+            <a href='https://www.instagram.com/manumendi21/'>
               <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 152 152">
                 <linearGradient id="a" x1="22.26" x2="129.74" y1="22.26" y2="129.74" gradientUnits="userSpaceOnUse">
                   <stop offset="0" stop-color="#fae100" />
@@ -54,14 +53,6 @@
                     </g>
                   </g>
                 </g>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href='javascript:void(0)'>
-              <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 1227 1227">
-                <path d="M613.5 0C274.685 0 0 274.685 0 613.5S274.685 1227 613.5 1227 1227 952.315 1227 613.5 952.315 0 613.5 0z" data-original="#000000" />
-                <path fill="#fff" d="m680.617 557.98 262.632-305.288h-62.235L652.97 517.77 470.833 252.692H260.759l275.427 400.844-275.427 320.142h62.239l240.82-279.931 192.35 279.931h210.074L680.601 557.98zM345.423 299.545h95.595l440.024 629.411h-95.595z" data-original="#ffffff" />
               </svg>
             </a>
           </li>
