update Documetation starligh
Agree documentacion module astro.
ajust Header modern.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ const { description, title } = Astro.props;
 		<div class="absolute inset-0 z-[-2] min-h-screen w-screen bg-[#000000] bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:30px_30px]"></div>
 	</div>
 
-	<Header />
+	<Header class="sticky top-0 left-0 w-full bg-white shadow-md z-50 transition-all duration-300"/>
 	<slot />
 </body>
 
