update main mobile
agree mobile web menu
url links

--- a/src/icons/Perfil.astro
+++ b/src/icons/Perfil.astro
@@ -6,8 +6,9 @@
         <h6 class="text-lg text-gray-800 mt-4">Ingeniero de Sistemas</h6>
 
             
-        <button type="button" class="bg-[#2bbd82] hover:bg-[#8b3434f6] text-white tracking-wide font-semibold text-sm py-3 px-6 rounded-xl mt-8">
-          Disponible
+        <button type="button" class="bg-[#38e39f] text-white tracking-wide font-semibold text-sm py-3 px-6 rounded-xl mt-8">
+          <a href="/Contact" target="_blank">Disponible</a>
+          
         </button>
 
         <ul class="flex flex-wrap justify-center gap-6 mt-8">
