--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,14 +2,13 @@
   <header class="flex border-b py-4 px-4 sm:px-10 bg-white font-sans min-h-[70px] tracking-wide relative z-50">
     <div class="flex flex-wrap items-center lg:gap-y-2 gap-y-4 gap-x-4 w-full max-w-screen-xl mx-auto">
       <!-- Logo -->
-      <a href="javascript:void(0)">
+      <a href="/">
         <img src="/Group7.svg" alt="logo" class="w-[140px] max-sm:hidden" />
         <img src="/Group8.svg" alt="logo" class="w-8 h-8 hidden max-sm:block" />
       </a>
 
       <!-- Menú de navegación -->
-      <div id="collapseMenu"
-        class="max-lg:hidden lg:!flex lg:items-center lg:flex-1 max-lg:before:fixed max-lg:before:bg-black max-lg:before:opacity-40 max-lg:before:inset-0 max-lg:before:z-50">
+      <div id="collapseMenu" class="hidden lg:flex lg:items-center lg:flex-1">
         <button id="toggleClose" class="lg:hidden fixed top-2 right-4 z-[100] rounded-full bg-white w-9 h-9 flex items-center justify-center border">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-3.5 h-3.5 fill-black" viewBox="0 0 320.591 320.591">
             <path
@@ -21,20 +20,19 @@
           </svg>
         </button>
 
-        <ul
-          class="lg:ml-10 lg:flex lg:gap-x-8 max-lg:space-y-3 max-lg:fixed max-lg:bg-white max-lg:w-2/3 max-lg:min-w-[300px] max-lg:top-0 max-lg:left-0 max-lg:px-10 max-lg:py-4 max-lg:h-full max-lg:shadow-md max-lg:overflow-auto z-50">
+        <ul class="lg:ml-10 lg:flex lg:gap-x-8 max-lg:space-y-3 max-lg:fixed max-lg:bg-white max-lg:w-2/3 max-lg:min-w-[300px] max-lg:top-0 max-lg:left-0 max-lg:px-10 max-lg:py-4 max-lg:h-full max-lg:shadow-md max-lg:overflow-auto z-50">
           <li class="mb-6 hidden max-lg:block">
-            <a href="javascript:void(0)"><img src="https://readymadeui.com/readymadeui.svg" alt="logo" class="w-36" />
+            <a href="/"><img src="/Group8.svg" alt="logo" class="w-12" />
             </a>
           </li>
           <li class="max-lg:border-b max-lg:py-3">
-            <a href="/" class="hover:text-[#007bff] text-[#007bff] block font-bold text-[15px]">Home</a>
+            <a href="/" class="hover:text-[#007bff] text-gray-600 block font-bold text-[20px]">Home</a>
           </li>
           <li class="max-lg:border-b max-lg:py-3">
-            <a href="/Project" class="hover:text-[#007bff] text-gray-600 block font-bold text-[15px]">Project</a>
+            <a href="/Project" class="hover:text-[#007bff] text-gray-600 block font-bold text-[20px]">Project</a>
           </li>
           <li class="max-lg:border-b max-lg:py-3">
-            <a href="/Contact" class="hover:text-[#007bff] text-gray-600 block font-bold text-[15px]">Contact</a>
+            <a href="/Contact" class="hover:text-[#007bff] text-gray-600 block font-bold text-[20px]">Contact</a>
           </li>
         </ul>
       </div>
