update z index button
z index

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@
 
       <!-- Menú de navegación -->
       <div id="collapseMenu" class="hidden lg:flex lg:items-center lg:flex-1">
-        <button id="toggleClose" class="lg:hidden fixed top-2 right-4 z-[100] rounded-full bg-white w-9 h-9 flex items-center justify-center border">
+        <button id="toggleClose" class="lg:hidden fixed top-2 right-4 z-[49] rounded-full bg-white w-9 h-9 flex items-center justify-center border">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-3.5 h-3.5 fill-black" viewBox="0 0 320.591 320.591">
             <path
               d="M30.391 318.583a30.37 30.37 0 0 1-21.56-7.288c-11.774-11.844-11.774-30.973 0-42.817L266.643 10.665c12.246-11.459 31.462-10.822 42.921 1.424 10.362 11.074 10.966 28.095 1.414 39.875L51.647 311.295a30.366 30.366 0 0 1-21.256 7.288z"
@@ -72,7 +72,7 @@
 <!-- Botón de WhatsApp -->
 
 
-<a href="https://wa.me/573123872739" target="_blank" id="whatsappButton" class="fixed bottom-16 right-4 bg-green-500 text-white p-3 rounded-full shadow-lg">
+<a href="https://wa.me/573123872739" target="_blank" id="whatsappButton" class="fixed bottom-16 right-4 bg-green-500 text-white p-3 rounded-full shadow-lg z-50">
   <svg
  xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 1219.547 1225.016" id="whatsapp">
     <path fill="#E0E0E0" d="M1041.858 178.02C927.206 63.289 774.753.07 612.325 0 277.617 0 5.232 272.298 5.098 606.991c-.039 106.986 27.915 211.42 81.048 303.476L0 1225.016l321.898-84.406c88.689 48.368 188.547 73.855 290.166 73.896h.258.003c334.654 0 607.08-272.346 607.222-607.023.056-162.208-63.052-314.724-177.689-429.463zm-429.533 933.963h-.197c-90.578-.048-179.402-24.366-256.878-70.339l-18.438-10.93-191.021 50.083 51-186.176-12.013-19.087c-50.525-80.336-77.198-173.175-77.16-268.504.111-278.186 226.507-504.503 504.898-504.503 134.812.056 261.519 52.604 356.814 147.965 95.289 95.36 147.728 222.128 147.688 356.948-.118 278.195-226.522 504.543-504.693 504.543z"></path>
@@ -92,7 +92,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 49;
   transition: opacity 0.3s ease, background-color 0.3s ease, color 0.3s ease;
 }
 
