Create documentation update porforlio

--- a/portafolio/src/pages/Project.astro
+++ b/portafolio/src/pages/Project.astro
@@ -4,7 +4,7 @@ import Projects from '../components/Projects.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Porfolio Manuel Mendieta Ingeniero de sistemas" description="Ingeniero de sistemas con mas de 10 años de experiencia">
+<Layout title="Manuel Mendieta Ingeniero de sistemas" description="Ingeniero de sistemas con mas de 10 años de experiencia">
 <Projects/>
     
 </Layout>
