--- a/portafolio/src/components/FooterFinal.astro
+++ b/portafolio/src/components/FooterFinal.astro
@@ -57,7 +57,7 @@
             </a>
           </li>
         </ul>
-        <div class="flex justify-center"><img src="/Component4.png" alt="logo" class="w-22 h-10 " />
+        <div class="flex justify-center"><img src="/favicon.svg" alt="logo" class="w-22 h-10 " />
         </div>
        
     <hr class="my-6 border-gray-600" />
