--- a/portafolio/src/components/Projects.astro
+++ b/portafolio/src/components/Projects.astro
@@ -6,8 +6,8 @@
 </h1>
 <div class="grid-container p-12 m-12">
     <div class="overflow-hidden shadow-lg rounded-lg h-auto cursor-pointer p-4 bg-indigo-50 transition duration-500 ease-in-out transform hover:translate-y-5 hover:shadow-2xl">
-        <a href="/magical-mass/" class="w-full block h-full">
-            <img alt="blog photo" src="/Mimanudev.webp" class="max-h-60 w-full object-cover"/>
+        <a href="/" class="w-full block h-full">
+            <img alt="blog photo" src="/Mimanudev.png" class="max-h-60 w-full object-cover"/>
             <div class="w-full">
                 <br>
                 <p class="text-gray-800 dark:text-white text-xl font-medium mb-2">
